# surge

./: .clang-format  .dir-locals.el  .gitignore  .gitmodules  AUTHORS  CHERRY_PICK_133.txt  CMakeLists.txt  PaulTODO.md  README.md  azure-pipelines.yml  build-linux.sh  build-osx.sh  build.cmd  buildtask.xml  cl.txt  diffs  do  fix_string_width.pl  install-local.sh  installer-local-au.sh  installer-local-vst2.sh  installer-local-vst3.sh  package-au.sh  package-vst.sh  package-vst3.sh  premake-full.lua  premake4.lua  premake5.lua  surge.def  surge.exp  x  x.sh
libs/LuaJitLib/: CMakeLists.txt  build-fat-luajit.sh  build-linux-luajit.sh  build-macos-luajit.sh  build-mingw-luajit.sh  build-msvc-luajit.bat
libs/airwindows/: .#q  CMakeLists.txt  LICENSE  README.md  grab.pl  grab.py
libs/catch2/: CMakeLists.txt
libs/catch2_v3/: CMakeLists.txt
libs/eurorack/: CMakeLists.txt
libs/filesystem/: CMakeLists.txt  filesystem.cpp  filesystem.h
libs/luajitlib/: CMakeLists.txt  README.md  build-linux-luajit.sh  build-macos-luajit.sh  build-mingw-luajit.sh  build-msvc-luajit.bat  msvcbuild.bat
libs/oddsound-mts/: CMakeLists.txt
libs/sqlite-3.23.3/: CMakeLists.txt  README.txt
libs/tinyxml/: CMakeLists.txt
src/: CMakeLists.txt
src/app/: PluginLayer.cpp  PluginLayer.h  main.cpp
src/au/: aulayer.cpp  aulayer.h  aulayer_cocoaui.h  aulayer_cocoaui.mm  aulayer_presets.cpp  plugin.h  surge_auversion.h
src/cmake/: get-asio.cmake  lib.cmake  pluginval.cmake  setup-juce.cmake
src/common/: #SurgeStorage.h#  .#SurgeStorage.h  .SurgePatch.cpp.swp  .SurgeSynthesizer.cpp.swp  AbstractSynthesizer.cpp  AbstractSynthesizer.h  CMakeLists.txt  CPUFeatures.cpp  CPUFeatures.h  CpuArchitecture.cpp  CpuArchitecture.h  DeactivationGroup.h  DebugHelpers.cpp  DebugHelpers.h  DeferredAssetLoader.cpp  DeferredAssetLoader.h  FilterConfiguration.h  FxPresetAndClipboardManager.cpp  FxPresetAndClipboardManager.h  ImportFilesystem.h  LuaSupport.cpp  LuaSupport.h  LuaTokeniserSurge.cpp  LuaTokeniserSurge.h  MemoryFile.h  MemoryPool.h  ModulationSource.cpp  ModulationSource.h  ModulatorPresetManager.cpp  ModulatorPresetManager.h  Parameter.cpp  Parameter.h  PatchDB.cpp  PatchDB.h  PatchDBQueryParser.cpp  PatchFileHeaderStructs.h  SIMD.h  Sample.cpp  Sample.h  SampleLoadRiffWave.cpp  (+66 more)
src/engine/: DeferredAssetLoader.cpp  DeferredAssetLoader.h  ModulatorPresetManager.cpp  Parameter.h  PatchDB.cpp  SkinModel.cpp  SkinModel.h  StringOps.h  SurgeParamConfig.h  SurgeStorage.cpp  SurgeStorage.h  SurgeSynthesizer.cpp  SurgeSynthesizer.h  SurgeSynthesizerIDManagement.cpp  globals.h  version.h
src/gui/: AccessibleHelpers.h  CAboutBox.cpp  CAboutBox.h  CEffectLabel.h  CEffectSettings.cpp  CEffectSettings.h  CHSwitch2.cpp  CHSwitch2.h  CLFOGUI.cpp  CLFOGui.cpp  CLFOGui.h  CMakeLists.txt  CMenuAsSlider.cpp  CMenuAsSlider.h  CMidiLearnOverlay.h  CModulationSourceButton.cpp  CModulationSourceButton.h  CNumberField.cpp  CNumberField.h  COscillatorDisplay.cpp  COscillatorDisplay.h  CParameterTooltip.h  CPatchBrowser.cpp  CPatchBrowser.h  CScalableBitmap.cpp  CScalableBitmap.h  CSnapshotMenu.cpp  CSnapshotMenu.h  CSurgeHyperlink.cpp  CSurgeSlider.cpp  CSurgeSlider.h  CSurgeVUMeter.cpp  CSurgeVuMeter.cpp  CSurgeVuMeter.h  CSwitchControl.cpp  CSwitchControl.h  CTextButtonWithHover.cpp  CTextButtonWithHover.h  CVerticalLabel.h  CursorControlGuard.cpp  (+44 more)
src/headless/: CMakeLists.txt  DisplayInfoHeadless.cpp  HeadlessApps.cpp  HeadlessApps.h  HeadlessNonTestFunctions.cpp  HeadlessNonTestFunctions.h  HeadlessPlayer.cpp  HeadlessPlayer.h  HeadlessPluginLayerProxy.h  HeadlessTools.cpp  HeadlessTools.h  HeadlessUtils.cpp  HeadlessUtils.h  LinkFixesHeadless.cpp  Player.cpp  Player.h  Stress.cpp  Stress.h  UnitTestUtilities.cpp  UnitTestUtilities.h  UnitTests.cpp  UnitTestsDSP.cpp  UnitTestsFLT.cpp  UnitTestsFX.cpp  UnitTestsID.cpp  UnitTestsIO.cpp  UnitTestsLUA.cpp  UnitTestsMIDI.cpp  UnitTestsMOD.cpp  UnitTestsMSEG.cpp  UnitTestsPARAM.cpp  UnitTestsTUN.cpp  UserInteractionsHeadless.cpp  main.cpp
src/juce_adapter/: CMakeLists.txt
src/linux/: ConfigurationXml.S  ConfigurationXml.h  ConfigurationXmlARM.S  DisplayInfoLinux.cpp  LinuxVST3Helpers.cpp  RuntimeFontLinux.cpp  ScalablePiggy.S  ScalablePiggy.h  UserInteractionsLinux.cpp  linux-aeffguieditor.cpp  linux-aeffguieditor.h
src/lua/: CMakeLists.txt  formula_prelude.lua  lua2cpp.cmake  pt1.cpp.in  pt2.cpp.in  pt3.cpp.in  surge_prelude.lua  surge_prelude_test.lua  surge_prologue.lua  surge_prologue_test.lua  wtse_prelude.lua
src/lv2/: AllLv2.h  SurgeLv2Export.cpp  SurgeLv2Helpers.cpp  SurgeLv2Helpers.h  SurgeLv2Ui.cpp  SurgeLv2Ui.h  SurgeLv2Util.cpp  SurgeLv2Util.h  SurgeLv2Vstgui.cpp  SurgeLv2Vstgui.h  SurgeLv2Wrapper.cpp  SurgeLv2Wrapper.h
src/mac/: DisplayInfoMac.mm  MacUserInteractions.cpp  RuntimeFontMac.cpp  UserInteractionsMac.cpp  UserInteractionsMac.mm  cocoa_utils.h  cocoa_utils.mm  objc_utils.h  objc_utils.mm
src/platform/: CMakeLists.txt
src/python_bindings/: CMakeLists.txt  surgepy.cpp
src/surge-fx/: CMakeLists.txt  FXOpenSoundControl.cpp  FXOpenSoundControl.h  KnobSource.h  ParameterPanel.cpp  ParameterPanel.h  SurgeFXContModParam.h  SurgeFXDefaultEditor.cpp  SurgeFXDefaultEditor.h  SurgeFXEditor.cpp  SurgeFXEditor.h  SurgeFXProcessor.cpp  SurgeFXProcessor.h  SurgeLookAndFeel.h
src/surge-python/: .surgepy.cpp.swp  CMakeLists.txt  pyproject.toml  setup.py  surgepy.cpp
src/surge-rs/: CMakeLists.txt  filter.py
src/surge-testrunner/: CMakeLists.txt  HeadlessNonTestFunctions.cpp  HeadlessNonTestFunctions.h  HeadlessPluginLayerProxy.h  HeadlessUtils.cpp  HeadlessUtils.h  Player.cpp  Player.h  UnitTestUtilities.cpp  UnitTestUtilities.h  UnitTests.cpp  UnitTestsBINN.cpp  UnitTestsDSP.cpp  UnitTestsFLT.cpp  UnitTestsFX.cpp  UnitTestsINFRA.cpp  UnitTestsIO.cpp  UnitTestsLUA.cpp  UnitTestsMIDI.cpp  UnitTestsMOD.cpp  UnitTestsMSEG.cpp  UnitTestsNOTEID.cpp  UnitTestsOSC.cpp  UnitTestsOpenSoundControl.cpp  UnitTestsPARAM.cpp  UnitTestsQUERY.cpp  UnitTestsTUN.cpp  UnitTestsVOICE.cpp  main.cpp
src/surge-xt/: CMakeLists.txt  LuaTokeniserSurge.h  SurgeSynthEditor.cpp  (+4 more)
(+7904 files in other folders)
